# BlenderMCP

./: .gitignore  LICENSE  README.md  addon.py  blender-bob-mode.yaml  pyproject.toml
src/blender_mcp/: __init__.py  server.py
