[project]
name            = "blender-mcp"
version         = "1.0.0"
description     = "Blender integration through the Model Context Protocol"
readme          = "README.md"
requires-python = ">=3.10"
authors         = [
    { name = "Jagath Jayakumar", email = "hello@hellojagath.com" }
]
license     = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
blender-mcp = "blender_mcp.server:main"

[project.urls]
Homepage      = "https://hellojagath.com"
"Bug Tracker" = "https://github.com/jagath/blender-mcp/issues"

[build-system]
requires      = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
